Attempt changes, update.

--- a/experimental/packages/opentelemetry-instrumentation-fetch/tsconfig.esm.json
+++ b/experimental/packages/opentelemetry-instrumentation-fetch/tsconfig.esm.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "build/esm",
     "rootDir": "src",
-    "tsBuildInfoFile": "build/esm/tsconfig.esm.tsbuildinfo"
+    "tsBuildInfoFile": "build/esm/tsconfig.esm.tsbuildinfo",
+    "target": "ES6"
   },
   "include": [
     "src/**/*.ts"
