--- a/experimental/packages/opentelemetry-instrumentation-fetch/tsconfig.json
+++ b/experimental/packages/opentelemetry-instrumentation-fetch/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "build",
-    "rootDir": "."
+    "rootDir": ".",
+    "target": "ES6"
   },
   "files": [],
   "include": [
